--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "lab1-myftp"]
 	path = lab1-myftp
 	url = https://github.com/N2Sys-EDU/lab1-myftp-Eren-Jeager123.git
+[submodule "lab2-rtp"]
+	path = lab2-rtp
+	url = https://github.com/N2Sys-EDU/lab2-rtp-Eren-Jeager123.git
+[submodule "lab3-router"]
+	path = lab3-router
+	url = https://github.com/N2Sys-EDU/lab3-router-Eren-Jeager123.git
+[submodule "lab4-switch"]
+	path = lab4-switch
+	url = https://github.com/N2Sys-EDU/lab4-switch-Eren-Jeager123.git
